# AIVA

./: .env.example  .gitignore  README.md  app.py  cli.py  project_cli.py  pyproject.toml  web_cli.py  web_server.py
api/: app.py  dependencies.py  job_dependencies.py  models.py  routes.py
config/: __init__.py  runtime.py  settings.py
core/: __init__.py  constants.py  exceptions.py  helpers.py  logger.py  result.py
engine/: __init__.py  context.py  executor.py  pipeline.py  registry.py  step.py  workflow.py
jobs/: __init__.py  manager.py  models.py
pipelines/: __init__.py  full_auto_video.py  resumable_video.py
prompts/: __init__.py  builder.py  exceptions.py  loader.py  manager.py  registry.py  template.py
prompts/templates/: image_generation.md  product_analysis.md  script_generation.md  storyboard_generation.md  video_generation.md  voice_generation.md
providers/: __init__.py  base.py  exceptions.py  mock.py  models.py  openai_provider.py  registry.py
providers/audio/: __init__.py  base.py  mock.py  models.py  openai_provider.py  registry.py
providers/image/: __init__.py  base.py  mock.py  models.py  openai_provider.py  registry.py
providers/video/: __init__.py  base.py  ffmpeg_image_provider.py  mock.py  models.py  registry.py
render/: __init__.py  engine.py  ffmpeg.py  models.py
schemas/: __init__.py  subtitles.py  video_planning.py
services/: __init__.py  context_persistence.py  image_generation.py  json_parser.py  preflight.py  project_assets.py  project_manifest.py  project_registry.py  project_status.py  rendering.py  resumable_runtime_factory.py  runtime_factory.py  subtitle_generation.py  video_generation.py  voice_generation.py
storage/: __init__.py  checkpoints.py
tests/: test_api.py  test_api_models.py  test_checkpoint_store.py  test_cli.py  test_context_full_restore.py  test_context_persistence.py  test_core_constants.py  test_core_exceptions.py  test_core_helpers.py  test_core_logger.py  test_engine_context.py  test_engine_executor.py  test_engine_registry_pipeline.py  test_engine_step.py  test_engine_workflow.py  test_ffmpeg_image_video_provider.py  test_full_auto_video_pipeline.py  test_image_provider_models.py  test_job_api.py  test_job_manager.py  test_json_parser.py  test_mock_image_provider.py  test_mock_provider.py  test_mock_video_provider.py  test_mock_voice_provider.py  test_openai_image_provider.py  test_openai_provider.py  test_openai_voice_provider.py  test_preflight.py  test_preflight_api.py  test_project_assets.py  test_project_cli.py  test_project_download_api.py  test_project_manifest.py  test_project_registry.py  test_project_status.py  test_prompt_builder_manager.py  test_prompt_loader.py  test_prompt_registry.py  test_prompt_template.py  (+22 more)
web/: index.html
workflows/: __init__.py  image_generation.py  project_manifest.py  rendering.py  subtitle_generation.py  video_generation.py  video_planning.py  voice_generation.py
