[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aiva"
version = "0.6.0"
description = "Fully automated AI video generation tool"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115,<1.0",
    "openai>=2.0,<3.0",
    "pydantic>=2.9,<3.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.9,<1.0",
]

[project.scripts]
aiva = "cli:main"
aiva-project = "project_cli:main"
aiva-web = "web_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP046"]

[tool.setuptools]
py-modules = [
    "app",
    "cli",
    "project_cli",
    "web_cli",
    "web_server",
]

[tool.setuptools.packages.find]
include = [
    "api*",
    "config*",
    "core*",
    "engine*",
    "jobs*",
    "pipelines*",
    "providers*",
    "workflows*",
    "services*",
    "storage*",
    "prompts*",
    "render*",
    "schemas*",
]
